// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtistsLinkHub Snapshot > renders with multiple artists correctly 1`] = `
"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
  <div><span><a href="/artists/artist-1/" aria-label="artist name">Artist 1</a></span></div>
  <div><span><a href="/artists/artist-2/" aria-label="artist name">Artist 2</a></span></div>
  <div><span><a href="/artists/artist-3/" aria-label="artist name">Artist 3</a></span></div>
</div>"
`;

exports[`ArtistsLinkHub Snapshot > renders with no artists correctly 1`] = `"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"></div>"`;

exports[`ArtistsLinkHub Snapshot > renders with one artist correctly 1`] = `
"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
  <div><span><a href="/artists/artist-1/" aria-label="artist name">Artist 1</a></span></div>
</div>"
`;
